--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title></title>
 </head>
 <body>
-    <a href="exercise1.html">Exercise 1</a>
+    <a href="exercise1.html">Exercise 1</a><br />
+    <a href="Quiz.html">Quiz</a>
 </body>
 </html>
